# weather-api-service-aws-cdk

./: .env.local.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Readme.md  conftest.py  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml
.serena/: project.yml
docs/: architecture.md
infrastructure/: app.py  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  apigateway_stack.py  dynamodb_stack.py  lambda_stack.py
infrastructure/utils/: __init__.py  constants.py  prefixes.py
lambda_function/: __init__.py  cache_service.py  config.py  external_api.py  lambda_function.py  local_dev.py  models.py  requirements.txt  retry_service.py  weather_service.py
tests/: conftest.py  test_lambda_function.py
tests/infrastructure/: test_apigateway_stack.py  test_app.py  test_dynamodb_stack.py  test_lambda_stack.py
tests/lambda_function/: test_lambda_function.py  test_retry_functionality.py
tests/service_functionality_test/: test_deployed_service.py
